evaluation/test_suite/negative/ub09/1.c

int main()
{
    int* p;
    {
        int x = 0;
        p = &x;
    }
    (void)p;
}
